--- a/src/Futsal/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Futsal/UserBundle/Resources/views/Security/login.html.twig
@@ -10,7 +10,7 @@
   {% endif %}
 
   {# Le formulaire, avec URL de soumission vers la route « login_check » comme on l'a vu #}
-  <form action="{{ path('login_check') }}" method="post">
+  <form action="{{ path('futsal_user_login_check') }}" method="post">
     <label for="username">Login :</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
