--- a/app/Resources/SonataUserBundle/views/Security/base_login.html.twig
+++ b/app/Resources/SonataUserBundle/views/Security/base_login.html.twig
@@ -33,7 +33,7 @@ file that was distributed with this source code.
                                 {{ 'security.login.username'|trans({}, 'FOSUserBundle') }}
                             </label>
                             <div class="col-lg-9 col-sm-9">
-                                <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required"/>
+                                <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'placeholder.username'|trans({}, 'FOSUserBundle') }}" required="required"/>
                             </div>
                         </div>
 
@@ -41,7 +41,7 @@ file that was distributed with this source code.
                             <label for="password" class="col-lg-3 col-sm-3 control-label">
                                 {{ 'security.login.password'|trans({}, 'FOSUserBundle') }}
                             </label>
-                            <div class="col-lg-9 col-sm-9"><input type="password" class="form-control" id="password" name="_password" required="required"/></div>
+                            <div class="col-lg-9 col-sm-9"><input type="password" class="form-control" id="password" name="_password" placeholder="{{ 'placeholder.password'|trans({}, 'FOSUserBundle') }}" required="required"/></div>
                         </div>
 
                         <div class="form-group">
@@ -71,8 +71,8 @@ file that was distributed with this source code.
             </div>
 
         </div>
-        <div class="col-md-6 hidden">
-            {% render controller("FOSUserBundle:Registration:register") %}
+        <div class="col-md-6">
+            {% render controller("FutsalUserBundle:Registration:register") %}
         </div>
     </div>
 {% endblock fos_user_content %}
